--- a/project1.html
+++ b/project1.html
@@ -12,12 +12,11 @@
 <body>
     <header>
         <nav>
-            <h3 class="logo">LANDSiTEMINE</h3>
+            <h1 class="logo">LANDSiTEMINE</h1>
             <ul>
-                <li><a href="home.html"><i class="fa-sharp fa-solid fa-house-chimney"></i>
-                        HOME</a></li>
-                <li><a href="contact.html"><i class="fa-solid fa-address-book"></i>CONTACT</a></li>
-                <li><a href="aboutus.html"><i class="fa-regular fa-address-card"></i>ABOUT US</a></li>
+                <li><a href="project1.html"  class="b"><i class="fa-sharp fa-solid fa-house-chimney"></i>HOME</a></li>
+                <li><a href="contact.html" class="b"><i class="fa-solid fa-address-book"></i>CONTACT</a></li>
+                <li><a href="aboutus.html" class="b"><i class="fa-regular fa-address-card"></i>ABOUT US</a></li>
                 <input type="text" placeholder="search">
                 <button type="submit" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </ul>
@@ -32,16 +31,16 @@
                     include residential, commercial, industrial, raw land, and special use.Real estate company means a
                     company which holds a portfolio of properties and includes a mutual or pooled fund or a segregated
                     fund the principal object of which is to provide investors with a means of investing in a portfolio
-                    of real estate or leaseholds.</p> 
-                </div>
-                <div class="description-2">
-                   <h3> LANDSITEMINE REAL ESTATE SOLUTION</h3>
-                   <h4>Always in your service</h4>
-                  <input type="button" value="GET STARTED">
-                </div>
+                    of real estate or leaseholds.</p>
+            </div>
+            <div class="description-2">
+                <h3> LANDSITEMINE REAL ESTATE SOLUTION</h3>
+                <h4>Always in your service</h4>
+                <a href="login.html" class="a">GET STARTED</a>
+            </div>
         </div>
-     
-            
+
+
     </main>
 
 
