--- a/login.html
+++ b/login.html
@@ -10,14 +10,17 @@
 
 <body>
     <div class="container">
-        <form method="post">
-            <h1>LOGIN FORM</h1><br>
-            <b> FULLNAME:</b><br><input type="text" placeholder="enter your fullname"><br><br>
-            <b>EMAIL:</b><br><input type="email" placeholder="enter your email" ><br><br>
-            <b>PASSWORD:</b><br><input type="password" placeholder="enter your password"><br>
+        <form method="post" action="">
+            <div class="sub-container">
+            <h1 class="heading-label">LOGIN FORM</h1><br>
+           
+            <b class="label"> FULLNAME:</b><br><input type="text" placeholder="enter your fullname"><br><br>
+            <b class="label">EMAIL:</b><br><input type="email" placeholder="enter your email" ><br><br>
+            <b class="label">PASSWORD:</b><br><input type="password" placeholder="enter your password"><br>
             <button type="button">LOGIN</button>
+        </div>
         </form>
-
+           
     </div>
 </body>
 
